--- a/resources/styles/book-content/hs-physics/interactive.less
+++ b/resources/styles/book-content/hs-physics/interactive.less
@@ -10,14 +10,18 @@
     #fonts > .sans(3rem, 4.6rem);
     font-weight: 900;
   }
-  p, ul, li {
+  p,
+  ul,
+  li {
     #fonts > .sans(1.8rem, 1.75em);
     margin: 0 0  1.5rem 0;
     color: @tutor-neutral-dark;
   }
 
   .note {
-    p, ul, li {
+    p,
+    ul,
+    li {
       #fonts > .sans(1.8rem, 1.75em);
       margin: 0 0  1.5rem 0;
       color: @tutor-neutral-dark;
