--- a/resources/styles/book-content/hs-physics/watch-physics.less
+++ b/resources/styles/book-content/hs-physics/watch-physics.less
@@ -20,7 +20,7 @@
     margin: -68px 0 0 -40px;
   }
 
-  & :last-child {
+  :last-child {
     padding-bottom: 0;
   }
 
